--- a/src/Views/Preference.axaml
+++ b/src/Views/Preference.axaml
@@ -17,10 +17,10 @@
         Width="600" SizeToContent="Height"
         CanResize="False"
         WindowStartupLocation="CenterScreen"
-        ExtendClientAreaToDecorationsHint="True"
-        ExtendClientAreaChromeHints="NoChrome">
-  <Grid RowDefinitions="30,Auto">
-    <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto">
+        ExtendClientAreaToDecorationsHint="{OnPlatform True, Linux=False}"
+        ExtendClientAreaChromeHints="{OnPlatform NoChrome, Linux=Default}">
+  <Grid RowDefinitions="Auto,Auto">
+    <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto" Height="30" IsVisible="{OnPlatform True, Linux=False}">
       <Border Grid.Column="0" Grid.ColumnSpan="3"
               Background="{DynamicResource Brush.TitleBar}"
               BorderThickness="0,0,0,1" BorderBrush="{DynamicResource Brush.Border0}"
@@ -30,9 +30,9 @@
             Width="14" Height="14"
             Data="{StaticResource Icons.Settings2}"
             Margin="10,0,0,0"
-            IsVisible="{Binding Source={x:Static vm:Preference.Instance}, Path=UseMacOSStyle, Converter={x:Static BoolConverters.Not}}"/>
+            IsVisible="{OnPlatform False, Windows=True}"/>
 
-      <Grid Grid.Column="0" Classes="caption_button_box" Margin="2,4,0,0" IsVisible="{Binding Source={x:Static vm:Preference.Instance}, Path=UseMacOSStyle}">
+      <Grid Grid.Column="0" Classes="caption_button_box" Margin="2,4,0,0" IsVisible="{OnPlatform False, macOS=True}">
         <Button Classes="caption_button_macos" Click="CloseWindow">
           <Grid>
             <Ellipse Fill="{DynamicResource Brush.MacOS.Close}"/>
@@ -47,7 +47,7 @@
                  HorizontalAlignment="Center" VerticalAlignment="Center"
                  IsHitTestVisible="False"/>
 
-      <Button Grid.Column="2" Classes="caption_button" Click="CloseWindow" IsVisible="{Binding Source={x:Static vm:Preference.Instance}, Path=UseMacOSStyle, Converter={x:Static BoolConverters.Not}}">
+      <Button Grid.Column="2" Classes="caption_button" Click="CloseWindow" IsVisible="{OnPlatform False, Windows=True}">
         <Path Data="{StaticResource Icons.Window.Close}"/>
       </Button>
     </Grid>
@@ -57,7 +57,7 @@
         <TabItem.Header>
           <TextBlock Classes="tab_header" Text="{DynamicResource Text.Preference.General}"/>
         </TabItem.Header>
-        <Grid Margin="8" RowDefinitions="32,32,32,32,32,32,Auto" ColumnDefinitions="Auto,*">
+        <Grid Margin="8" RowDefinitions="32,32,32,32,32,32" ColumnDefinitions="Auto,*">
           <TextBlock Grid.Row="0" Grid.Column="0"
                      Text="{DynamicResource Text.Preference.General.Locale}"
                      HorizontalAlignment="Right"
@@ -138,12 +138,6 @@
                     Height="32"
                     Content="{DynamicResource Text.Preference.General.UseFixedTabWidth}"
                     IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=UseFixedTabWidth, Mode=TwoWay}"/>
-
-          <CheckBox Grid.Row="6" Grid.Column="1"
-                    Height="32"
-                    Content="{DynamicResource Text.Preference.General.UseMacOSStyle}"
-                    IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=UseMacOSStyle, Mode=TwoWay}"
-                    IsVisible="{Binding #me.CanChangeTitleBarStyle}"/>
         </Grid>
       </TabItem>
 
