--- a/src/Views/Statistics.axaml
+++ b/src/Views/Statistics.axaml
@@ -13,11 +13,11 @@
         Width="800" Height="450"
         WindowStartupLocation="CenterOwner"
         CanResize="False"
-        ExtendClientAreaToDecorationsHint="True"
-        ExtendClientAreaChromeHints="NoChrome">
-  <Grid RowDefinitions="30,Auto,*">
+        ExtendClientAreaToDecorationsHint="{OnPlatform True, Linux=False}"
+        ExtendClientAreaChromeHints="{OnPlatform NoChrome, Linux=Default}">
+  <Grid RowDefinitions="Auto,Auto,*">
     <!-- Title bar -->
-    <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto">
+    <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto" Height="30" IsVisible="{OnPlatform True, Linux=False}">
       <Border Grid.Column="0" Grid.ColumnSpan="3"
               Background="{DynamicResource Brush.TitleBar}"
               BorderThickness="0,0,0,1" BorderBrush="{DynamicResource Brush.Border0}"
@@ -27,9 +27,9 @@
             Width="14" Height="14"
             Margin="10,0,0,0"
             Data="{StaticResource Icons.Statistics}"
-            IsVisible="{Binding Source={x:Static vm:Preference.Instance}, Path=UseMacOSStyle, Converter={x:Static BoolConverters.Not}}"/>
+            IsVisible="{OnPlatform False, Windows=True}"/>
 
-      <Grid Grid.Column="0" Classes="caption_button_box" Margin="2,4,0,0" IsVisible="{Binding Source={x:Static vm:Preference.Instance}, Path=UseMacOSStyle}">
+      <Grid Grid.Column="0" Classes="caption_button_box" Margin="2,4,0,0" IsVisible="{OnPlatform False, macOS=True}">
         <Button Classes="caption_button_macos" Click="CloseWindow">
           <Grid>
             <Ellipse Fill="{DynamicResource Brush.MacOS.Close}"/>
@@ -47,7 +47,7 @@
       <Button Grid.Column="2"
               Classes="caption_button"
               Click="CloseWindow"
-              IsVisible="{Binding Source={x:Static vm:Preference.Instance}, Path=UseMacOSStyle, Converter={x:Static BoolConverters.Not}}">
+              IsVisible="{OnPlatform False, Windows=True}">
         <Path Data="{StaticResource Icons.Window.Close}"/>
       </Button>
     </Grid>
